--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,11 +8,11 @@
           <% end %>
         </li>
         <li data-navbar-target="about">
-          <%= link_to "ABOUT", root_path(anchor:"about_link"), class:"link" %>
+          <%= link_to "ABOUT", root_path(anchor:"about_link_computer"), class:"link" %>
         </li>
         <% if current_page?(root_path) %>
           <li data-navbar-target="partners">
-            <%= link_to "PARTNERS", root_path(anchor:"partners_link"), class:"link" %>
+            <%= link_to "PARTNERS", root_path(anchor:"partners_link_computer"), class:"link" %>
           </li>
         <% end %>
     	  <li data-navbar-target="artfair">
