--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,14 +19,14 @@
           <%= link_to 'Art Fair', art_fair_path %>
         </li>
         <% if current_page?("/art-fair") || current_page?("/art-fair-programm") %>
-          <li>
+          <li style="width: 57.1px">
           </li>
         <% end %>
     	  <li data-navbar-target="design">
           <%= link_to 'Design', design_path %>
         </li>
         <% if current_page?("/design") || current_page?("/design-programm") %>
-          <li>
+          <li style="width: 57.1px">
           </li>
         <% end %>
         <li data-navbar-target="contact">
