--- a/app/assets/stylesheets/pages/art_fair.scss
+++ b/app/assets/stylesheets/pages/art_fair.scss
@@ -1,7 +1,7 @@
 .about_art {
   text-align: center;
   padding: 0 15vw;
-  height: 88vh;
+  height: 85vh;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -37,4 +37,20 @@ p:nth-of-type(2) {
 
 p:nth-of-type(3) {
   margin-bottom: 3vh;
+}
+
+@media only screen and (min-width:279px) and (max-width:766px) {
+  .down_border_tel {
+    border-bottom: 1px solid black;
+    background-color: #f4f4f4;
+  }
+
+  .coordinates {
+    display: unset;
+  }
+
+  .about_art {
+    height: unset;
+    margin-top: 3rem;
+  }
 }
