--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -88,7 +88,6 @@ a:active,
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 6vh;
   }
 
   .rotate {
@@ -105,6 +104,7 @@ a:active,
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 13px;
   }
 
   .slide {
