navbar registration link

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,7 +33,7 @@
           <%= link_to "CONTACT", root_path(anchor:"contact_link"), class:"link" %>
         </li>
         <li  data-navbar-target="registration">
-          <%= link_to "REGISTRATION", "/registration", class:"link" %>
+          <%= link_to "REGISTRATION", new_registration_path, class:"link" %>
         </li>
       </ul>
     </nav>
@@ -71,7 +71,7 @@
           <%= link_to 'Art Fair', art_fair_path, class:"link"  %>
           <%= link_to 'Design', design_path, class:"link"  %>
           <%= link_to "CONTACT", root_path(anchor:"contact_link"), class:"link" %>
-          <%= link_to "REGISTRATION", "/registration", class:"link" %>
+          <%= link_to "REGISTRATION", new_registration_path, class:"link" %>
         </div>
       </li>
     </ul>
