--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -178,8 +178,8 @@
       </div>
     </div>
   </div>
-  <div id="about_link" style="height: 4px;"></div>
-    <main class="only_on_tel" class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
+  <div id="about_link" class="only_on_tel" style="height: 8.35vw;"></div>
+    <main class="only_on_tel skew-scroll" style="transform: skewY(5.08047e-251deg);">
     <section class="all_text">
       <div class="section_one">
         <p>For its second design edition, Bienvenue Design fair will take place at the Hotel La Louisiane, 60 rue de Seine, in the mythical Saint-Germain-des-Prés district, during the Paris Design Week, from September 8 to 11.<br>
@@ -200,7 +200,7 @@
       </div>
     </section>
   </main>
-  <main id="about_link_computer" class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
+  <main id="about_link" class="only_on_comp skew-scroll" style="transform: skewY(5.08047e-251deg);">
     <section class="all_text">
       <div class="section_one">
         <p>For its second design edition, Bienvenue Design fair will take place at the Hotel La Louisiane, 60 rue de Seine, in the mythical Saint-Germain-des-Prés district, during the Paris Design Week, from September 8 to 11.<br>
@@ -221,8 +221,8 @@
       </div>
     </section>
   </main>
-  <div id="partners_link" style="height: 208px;"></div>
-  <main class="only_on_tel" class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
+  <div id="partners_link" class="only_on_tel" style="height: 106vw;"></div>
+  <main class="only_on_tel skew-scroll" style="transform: skewY(5.08047e-251deg);">
     <section class="all_text tel_position">
       <div class="partner_display">
         <div class="display_photos">
@@ -236,7 +236,7 @@
       </div>
     </section>
   </main>
-  <main id="partners_link_computer" class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
+  <main id="partners_link" class="skew-scroll only_on_comp" style="transform: skewY(5.08047e-251deg);">
     <section class="all_text tel_position">
       <div class="partner_display">
         <div class="display_photos">
