ok registration comp

--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,33 +1,40 @@
-<%= form_with model: @registration, method: :post, class: "registration-form" do |reg_form| %>
-  <div class="registration-group">
-    <%= reg_form.label "Select your title" %>
-    <div class="registration-radio">
-      <%= reg_form.collection_radio_buttons :title, @titles, :to_s, :to_s %>
+<div class="registration_top">
+  <%= link_to "< BACK", :back %>
+  <h1 class="registration_title"> REGISTRATION </h1>
+  <div class="invisible_div"></div>
+</div>
+<div class="form_in_middle">
+  <%= form_with model: @registration, method: :post, class: "registration-form" do |reg_form| %>
+    <div class="registration-group group_one">
+      <%= reg_form.label "Select your title:", class: "underline" %>
+      <div class="registration-radio">
+        <%= reg_form.collection_radio_buttons :title, @titles, :to_s, :to_s %>
+      </div>
     </div>
-  </div>
-  <div class="registration-group">
-    <%= reg_form.label "First name" %>
-    <%= reg_form.text_field :first_name %>
-  </div>
-  <div class="registration-group">
-    <%= reg_form.label "Last name" %>
-    <%= reg_form.text_field :last_name %>
-  </div>
-  <div class="registration-group">
-    <%= reg_form.label "Select your status" %>
-    <div class="registration-radio">
-      <%= reg_form.collection_radio_buttons :status, @status, :to_s, :to_s %>
+    <div class="registration-group">
+      <%= reg_form.label "First name" %>
+      <%= reg_form.text_field :first_name %>
     </div>
-  </div>
-  <div class="registration-group">
-    <%= reg_form.label "Email" %>
-    <%= reg_form.text_field :email %>
-  </div>
-  <div class="registration-group">
-    <%= reg_form.label "Select your category" %>
-    <div class="registration-radio">
-      <%= reg_form.collection_radio_buttons :category, @categories, :to_s, :to_s %>
+    <div class="registration-group">
+      <%= reg_form.label "Last name" %>
+      <%= reg_form.text_field :last_name %>
     </div>
-  </div>
-  <%= reg_form.submit "Submit" %>
-<% end %>
+    <div class="registration-group group_four">
+      <%= reg_form.label "Select your status:", class: "underline" %>
+      <div class="registration-radio">
+        <%= reg_form.collection_radio_buttons :status, @status, :to_s, :to_s %>
+      </div>
+    </div>
+    <div class="registration-group">
+      <%= reg_form.label "Email" %>
+      <%= reg_form.text_field :email %>
+    </div>
+    <div class="registration-group group_four">
+      <%= reg_form.label "Select your category:", class: "underline" %>
+      <div class="registration-radio">
+        <%= reg_form.collection_radio_buttons :category, @categories, :to_s, :to_s %>
+      </div>
+    </div>
+    <%= reg_form.submit "SUBMIT", class: "button_sub" %>
+  <% end %>
+</div>
