--- a/app/assets/stylesheets/pages/registration.scss
+++ b/app/assets/stylesheets/pages/registration.scss
@@ -2,11 +2,17 @@
   display: flex;
   flex-direction: column;
   width: 50%;
+  text-transform: uppercase;
+  border: 1px solid black;
+  padding: 2rem;
+  border-radius: 2px;
+  background-color: #f4f4f4;
+
 
   input {
     margin: 0 0.5rem;
   }
-  
+
   label {
     margin: 0 0.5rem;
   }
@@ -16,4 +22,50 @@
   margin: 0.5rem 0;
   display: flex;
   flex-direction: column;
+}
+
+.registration_title {
+  font-size: 1.1rem;
+  margin: 0;
+}
+
+.invisible_div {
+  width: 51.7px;
+}
+
+.registration_top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+  padding: 6px;
+}
+
+.form_in_middle {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 91vh;
+  align-items: center;
+  background-color: #e3e3e3;
+}
+
+.group_one {
+  display: flex;
+  flex-direction: row;
+}
+
+.underline {
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
+.group_four {
+  line-height: 37px;
+}
+
+.button_sub {
+  background-color: white;
+  border-radius: 2px;
 }
