--- a/app/views/design_exhibitors/index.html.erb
+++ b/app/views/design_exhibitors/index.html.erb
@@ -1,9 +1,12 @@
-<h1>Art exhibitors</h1>
-
+<div class="registration_top">
+  <%= link_to "< BACK", :back %>
+  <h1 class="registration_title"> BIENVENUE DESIGN EXHIBITORS </h1>
+  <div class="invisible_div"></div>
+</div>
 <% @design_exhibitors.each do |d_exhib| %>
   <div>
-    <p>Artist name : <%= simple_format(d_exhib.artist_name) %></p>
-    <p>description : <%= simple_format(d_exhib.description) %></p>
-    <p>link to the artist : <%= link_to d_exhib.url, "http://#{d_exhib.url}" %></p>
+    <p><%= simple_format(d_exhib.artist_name) %></p>
+    <p><%= simple_format(d_exhib.description) %></p>
+    <p><%= link_to d_exhib.url, "http://#{d_exhib.url}" %></p>
   </div>
 <% end %>
