--- a/app/views/design_exhibitors/index.html.erb
+++ b/app/views/design_exhibitors/index.html.erb
@@ -1,6 +1,6 @@
 <div class="registration_top">
   <%= link_to "< BACK", "javascript:history.back()" %>
-  <h1 class="registration_title"> BIENVENUE DESIGN EXHIBITORS </h1>
+  <h1 class="registration_title size"> BIENVENUE DESIGN EXHIBITORS </h1>
   <div class="invisible_div"></div>
 </div>
 <% @design_exhibitors.each do |d_exhib| %>
