--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,6 +7,7 @@
   position: sticky;
   bottom: 0;
   background-color: #F4F4F4;
+  z-index: 20;
 }
 
 @media only screen and (min-width:279px) and (max-width:766px) {
