--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -90,6 +90,7 @@ a:active,
     display: flex;
     align-items: center;
     justify-content: center;
+    border-bottom: unset;
   }
 
   .rotate {
