--- a/app/assets/stylesheets/design_exhibitors/_index_design_exhibitors.scss
+++ b/app/assets/stylesheets/design_exhibitors/_index_design_exhibitors.scss
@@ -66,6 +66,7 @@
   }
 
   .pics {
+    display: flex;
     flex-direction: column;
   }
 
@@ -92,5 +93,10 @@
 
   .comp_mode {
     display: none;
+  }
+
+  .pics_divs {
+    height: 300px;
+    width: 100%;
   }
 }
