--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -66,21 +66,15 @@
       </li>
         <div class="column slide" data-navbar-target="aboutdown">
           <ul class="list_menu_column">
-            <li data-navbar-target="aboutlink">
-              <a href="./#about_link">ABOUT</a>
-            </li>
-            <li data-navbar-target="partnerslink">
-               <a href="./#partners_link">PARTNERS</a>
-            </li>
+            <li>ABOUT</li>
+            <li>PARTNERS</li>
             <li>
               <%= link_to 'Bienvenue Art Fair', art_fair_path, class:"link"  %>
             </li>
             <li>
               <%= link_to 'Bienvenue Design', design_path, class:"link"  %>
             </li>
-            <li data-navbar-target="contactlink">
-               <a href="./#contact_link">CONTACT</a>
-            </li>
+            <li>CONTACT</li>
             <li>
               <%= link_to "REGISTRATION", new_registration_path, class:"link" %>
             </li>
