--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -60,7 +60,7 @@
     <% end %>
   </div>
   <div class="header" id="nav_tel">
-    <ul class="navbar-nav main-nav">
+    <ul class="navbar-nav .main-nav <%= "stick_nav" unless current_page? (root_path) %> <%= "erase_lign" if current_page? (design_exhibitors_path) %>">
       <li class="align_icon">
         <i data-navbar-target="cross" class="fa-solid fa-plus" style="font-size: 1.4em;"></i>
       </li>
@@ -89,14 +89,14 @@
     </ul>
     <% unless current_page?(root_path) %>
       <ul class="navbar_down down_border_tel">
-        <% if current_page?("/art-fair") %>
+        <% if current_page?("/art-fair") || current_page?("/art-fair-programm")%>
           <li>
             <%= link_to "EXHIBITORS", art_fair_exhibitors_path, class:"link" %>
           </li>
           <li>
             <%= link_to "PROGRAMM", "/art-fair-programm", class:"link" %>
           </li>
-        <% elsif current_page?("/design") %>
+        <% elsif current_page?("/design") || current_page?("/design-programm") %>
           <li>
             <%= link_to "EXHIBITORS", design_exhibitors_path, class:"link" %>
           </li>
