--- a/app/assets/stylesheets/design_exhibitors/_index_design_exhibitors.scss
+++ b/app/assets/stylesheets/design_exhibitors/_index_design_exhibitors.scss
@@ -53,7 +53,18 @@
 .pics_divs {
   width: 300px;
   object-fit: contain;
+}
 
+.middle_coming {
+  height: 95vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.come {
+  margin-bottom: 0;
+  font-size: 1.2rem;
 }
 
 @media only screen and (min-width:279px) and (max-width:766px) {
