--- a/app/views/art_fair_exhibitors/index.html.erb
+++ b/app/views/art_fair_exhibitors/index.html.erb
@@ -10,7 +10,9 @@
   </div>
 </div>
 <% if @art_fair_exhibitors.empty? %>
-  <p>Coming Soon</p>
+  <div class="middle_coming">
+    <p class="come">COMING SOON</p>
+  </div>
 <% else %>
   <% @art_fair_exhibitors.each do |a_exhib| %>
     <div>
