--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -213,7 +213,7 @@
       </div>
     </section>
   </main>
-  <section class="all_text border_ height_tel">
+  <section class="all_text border height_tel">
     <div style="transform: skewY(5.08047e-251deg);">
       <div class="logos_lign">
 		    <p id="contact_link"><%= link_to "http://instagram.com/bienvenue.art"  do %>
