--- a/app/views/pages/art_fair_programm.html.erb
+++ b/app/views/pages/art_fair_programm.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/navbar" %>
-<section class="about_art pro">
+<section class="about_art pro tab_pro">
   <div>
     <%= simple_format(@art_fair.programm) %>
   </div>
