--- a/app/views/design_exhibitors/index.html.erb
+++ b/app/views/design_exhibitors/index.html.erb
@@ -24,8 +24,7 @@
       <div class="flex_middle">
         <div class="pics">
           <% d_exhib.photos.each do |photo| %>
-            <div class="pics_divs" style="background-image: url(<%= cl_image_path(photo.key) %>); background-size: cover;
-            background-position: center">
+            <div class="pics_divs" style="background-image: url(<%= cl_image_path(photo.key) %>)">
             </div>
           <% end %>
         </div>
