--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="navbar" id="header">
-  <div class="nav_height" id="nav_computer">
+  <div id="nav_computer">
     <nav class="main-nav">
       <ul>
         <li data-navbar-target="back">
@@ -59,7 +59,7 @@
       </nav>
     <% end %>
   </div>
-  <div class="header" id="nav_tel">
+  <div class="header nav_height" id="nav_tel">
     <ul class="navbar-nav .main-nav <%= "stick_nav" unless current_page? (root_path) %> <%= "erase_lign" if current_page?(design_exhibitors_path) || current_page?(art_fair_exhibitors_path) %>">
       <li class="align_icon">
         <i data-navbar-target="cross" class="fa-solid fa-plus" style="font-size: 1.4em;"></i>
