--- a/app/assets/stylesheets/pages/registration.scss
+++ b/app/assets/stylesheets/pages/registration.scss
@@ -25,6 +25,13 @@
   align-items: center;
 }
 
+.gif {
+  background-image: url(BIENVENUE-GIF-2.gif);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+}
 
 .in_the_middle {
   height: 166%;
