--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
 <section id="main-container">
-  <section id="intro">
-  <div class="gif"></div>
-  </section>
+  <div class="gif_home">
+    <section id="intro">
+    </section>
+  </div>
   <%= render "shared/navbar" %>
   <main class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
     <section class="all_text">
