attached photos in admin

--- a/app/views/art_fair_exhibitors/index.html.erb
+++ b/app/views/art_fair_exhibitors/index.html.erb
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="text">
-        <%= simple_format(d_exhib.description) %>
+        <%= simple_format(a_exhib.description) %>
         <%= link_to a_exhib.url, "http://#{a_exhib.url}" %>
       </div>
     </div>
